--- a/mainFeed/style.css
+++ b/mainFeed/style.css
@@ -16,10 +16,12 @@ body {
     height: 50px;
 }
 #topBarTitle {
-    font-family: Roboto, sans-serif; 
+    font-family: Roboto, sans-serif;      
+    font-weight: 300;
     color: white;
     text-align: center;
     padding-top: 3px;
+    margin: 0px;
 }
 #hamburgerIcon {
     position: absolute;
@@ -33,3 +35,128 @@ body {
 #hamburgerIcon:hover {
     fill: #96c8a2;
 }
+
+/* styling for the menu */
+#menu {
+    height: 100%;
+    width: 250px;
+    background-color: black;
+    padding-top: 10px;
+    display: none;
+}
+.menuItem {
+    color: white;
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
+    padding-left: 10px;
+}
+.menuItem:hover {
+    color: #96c8a2;
+}
+.menuHR {
+    border: solid 1px white; 
+}
+
+/* styling for date banners */
+.dateBanner {
+    width: 100%;
+    height: 30px;
+    background-color: #00CCE5;
+    margin-bottom: 10px;
+}
+.dateBannerText {
+    font-family: Roboto, sans-serif;      
+    font-weight: 300;
+    color: white;
+    text-align: center; 
+    padding-top: 3px;
+}
+
+/* styling for event containers */
+.eventContainer {
+    width: 100%;
+}
+.eventElementsContainer {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.topLineContainer {
+    width: 100%;
+}
+.eventTitle {
+    font-size: 30px;
+    color: black; 
+    font-family: Roboto, sans-serif;      
+    font-weight: 300;
+    text-shadow: 1px 1px #96c8a2;
+}
+.bookmarkIcon {
+    padding-top: 10px;
+    float: right;
+    width: 40px;
+    height: 40px;
+}
+.bookmarkIcon:hover {
+    content:url("assets/bookmark-icon-full.svg");
+}
+.eventHost {
+    margin-top: 10px;
+    font-size: 18px;
+    color: black; 
+    font-family: Roboto, sans-serif;      
+    font-weight: 300;
+    text-shadow: 1px 1px #96c8a2;
+}
+.locationMarkerIcon {
+    height: 20px;
+    width: 20px;
+}
+.locationLabel {
+    margin-top: -10px;
+    font-size: 25px;
+    color: black; 
+    font-family: Roboto, sans-serif;      
+    font-weight: 300;
+    text-shadow: 1px 1px #96c8a2;
+}
+.attendButton {
+    margin-top: -10px;
+    font-size: 20px;
+    color: #3AD282; 
+    font-family: Roboto, sans-serif;
+    width: 100%;
+    background-color: white;
+    height: 35px;
+    border: 2px solid #3AD282;
+    border-radius: 10px;
+    outline: none;
+}
+.attendButton:hover {
+    color: white; 
+    background-color: #3AD282;
+}
+.eventHR {
+    border: solid 1px black;
+    width: 97%;
+    margin-right: 0px;
+}
+.eventContainer:hover {
+    background-color: #E7E7E7;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
