--- a/mainFeed/style.css
+++ b/mainFeed/style.css
@@ -38,11 +38,15 @@ body {
 
 /* styling for the menu */
 #menu {
-    height: 100%;
+    height: -webkit-calc(100% - 60px);
+    height: -moz-calc(100% - 60px);
+    height: calc(100% - 60px);
     width: 250px;
     background-color: black;
     padding-top: 10px;
-    display: none;
+    position: absolute;
+    z-index: 1000;
+    margin-left: -250px;
 }
 .menuItem {
     color: white;
@@ -55,6 +59,9 @@ body {
 }
 .menuHR {
     border: solid 1px white; 
+}
+.menuLink {
+    text-decoration: none;
 }
 
 /* styling for date banners */
