--- a/mainFeed/style.css
+++ b/mainFeed/style.css
@@ -152,11 +152,80 @@ body {
     background-color: #E7E7E7;
 }
 
+/* styling for the popup */
+#fadeContainer {
+    display: none;
+}
+#popupContainer {
 
+    filter: alpha(opacity=80); /* For IE8 and earlier */
+    background-color: rgba(204, 204, 204, .8);
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+    display: table;
+}
+#verticalAlignmentContainer {
+    width: 50%;
+    height: 90%;
+    display: table-cell;
+    vertical-align: middle;
+}
+#popupMain {
+    width: 90%;
+    height: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid black;
+    background-color: rgba(255, 255, 255, 1);
+    z-index: 2000;
+}
+#popupAlertIcon {
+    width: 40px;
+    height: 40px;
+}
+#popupAlertIcon:hover {
+    content:url("bell-icon-popup-active.svg");
+}
+#popupBellIconContainer {
+    width: 5%;
+    display: table-cell;
+}
+#popupQuitIcon {
+    width: 40px;
+    height: 40px;
+}
+#popupQuitIcon:hover{
+    fill: #96c8a2 !important;
+}
+#popupQuitIconContainer {
+    width: 5%;
+    display: table-cell;
+}
 
-
-
-
+#popupTitleContainer {
+    display: table-cell;
+    width: 90%;
+    vertical-align: top;
+}
+#popupEventTitle {
+    font-size: 30px;
+    color: black; 
+    font-family: Roboto, sans-serif;      
+    font-weight: 300;
+    text-shadow: 1px 1px #96c8a2;
+}
+#popupTopSection {
+    text-align: center;
+    display: table;
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 98%;
+}
 
 
 
