--- a/createNewEvent/style.css
+++ b/createNewEvent/style.css
@@ -14,6 +14,8 @@ body {
     background-color: black;
     width: 100%;
     height: 50px;
+    position: fixed;
+    top: 0;
 }
 #topBarTitle {
     font-family: Roboto, sans-serif;      
@@ -105,6 +107,11 @@ body {
     height: 150px !important;
     resize: none;
 }
+#whiteSpace {
+    height: 50px;
+    width: 100%;
+}
+
 
 /* placeholder styling */
 .formInput::-webkit-input-placeholder { /* WebKit, Blink, Edge */
