--- a/mainFeed/style.css
+++ b/mainFeed/style.css
@@ -16,7 +16,7 @@ body {
     height: 50px;
     position: fixed;
     top: 0;
-    z-index: -10;
+    z-index: 10;
 }
 #topBarTitle {
     font-family: Roboto, sans-serif;      
@@ -38,6 +38,18 @@ body {
 #hamburgerIcon:hover {
     fill: #96c8a2;
 }
+#backArrow {
+    position: absolute;
+    padding-top: 10px;
+    padding-left: 10px;
+    width: 30px;
+    height: 30px;
+    fill: white;
+    left: -40px;
+}
+#backArrow:hover {
+    fill: #96c8a2;
+}
 
 /* styling for the menu */
 #menu {
@@ -48,7 +60,8 @@ body {
     background-color: black;
     padding-top: 10px;
     position: absolute;
-    z-index: 1000;
+    z-index: 9;
+    margin-top: 50px;
     margin-left: -250px;
 }
 .menuItem {
@@ -65,6 +78,9 @@ body {
 }
 .menuLink {
     text-decoration: none;
+}
+#helpButton {
+    margin-top: 100px;
 }
 #whiteSpace {
     height: 50px;
@@ -171,6 +187,74 @@ body {
     background-color: #E7E7E7;
 }
 
+/* styling for the help popup */
+#helpContainer {
+    filter: alpha(opacity=80); /* For IE8 and earlier */
+    background-color: rgba(204, 204, 204, .8);
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+    display: none;
+}
+#mainHelpPopup {
+    width: 90%;
+    height: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid black;
+    background-color: rgba(255, 255, 255, 1);
+    z-index: 2000;
+    position: relative;
+    display: table;
+    text-align: center;
+}
+#helpVerticalContainer {
+    width: 50%;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+}
+#helpTitle {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 30px;
+}
+#helpContent {
+    text-align: left !important;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    overflow-y: scroll;
+}
+#helpBottomSection {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-bottom: 10px;
+    background-color: white;
+}
+#helpClose {
+    width: 95%;
+    font-size: 20px;
+    color: #4286f4; 
+    font-family: Roboto, sans-serif;
+    background-color: white;
+    height: 35px;
+    border: 2px solid #4286f4;
+    border-radius: 10px;
+    outline: none;
+}
+#helpClose:hover {
+    color: white; 
+    background-color: #4286f4;
+}
 /* styling for the popup */
 #fadeContainer {
     display: none;
@@ -185,9 +269,9 @@ body {
     top:0px;
     left:0px;
     z-index:1000;
-    display: table;
+    display: none;
 }
-#verticalAlignmentContainer {
+.verticalAlignmentContainer {
     width: 50%;
     height: 90%;
     display: table-cell;
