--- a/createAccount/style.css
+++ b/createAccount/style.css
@@ -90,8 +90,10 @@ body {
 .infoLink:hover {
     text-decoration: underline;
 }
-
-
+.g-recaptcha div{
+    margin: 0 auto;
+    margin-top: 10px !important;
+}
 
 
 
